--- a/index.html
+++ b/index.html
@@ -1,86 +1,194 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>Socket.IO chat</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dart</title>
     <style>
+      * {
+        box-sizing: border-box;
+      }
       body {
         margin: 0;
         padding-bottom: 3rem;
         font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
           Helvetica, Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        padding: 1rem;
       }
-
-      #form {
-        background: rgba(0, 0, 0, 0.15);
-        padding: 0.25rem;
-        position: fixed;
+      main {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        flex: 1 1 0%;
+      }
+      aside {
+        position: absolute;
         bottom: 0;
         left: 0;
         right: 0;
+        text-align: center;
+        padding: 1rem;
+      }
+      form {
+        margin-top: 0.5rem;
+      }
+      input,
+      button {
+        padding: 0.25rem 0.5rem;
+        font-size: 1rem;
+      }
+      .hide {
+        display: none;
+      }
+      .steps {
         display: flex;
-        height: 3rem;
-        box-sizing: border-box;
-        backdrop-filter: blur(10px);
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        position: relative;
       }
-      #input {
-        border: none;
-        padding: 0 1rem;
-        flex-grow: 1;
-        border-radius: 2rem;
-        margin: 0.25rem;
+      .step.passive {
+        --step: 1;
+        color: gray;
+        font-size: 1.25rem;
       }
-      #input:focus {
-        outline: none;
+      .step {
+        font-size: 2rem;
       }
-      #form > button {
-        background: #333;
-        border: none;
-        padding: 0 1rem;
-        margin: 0.25rem;
-        border-radius: 3px;
-        outline: none;
-        color: #fff;
-      }
-
-      #messages {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-      }
-      #messages > li {
-        padding: 0.5rem 1rem;
-      }
-      #messages > li:nth-child(odd) {
-        background: #efefef;
+      @media (min-width: 768px) {
+        .step {
+          font-size: 4rem;
+        }
+        .step.passive {
+          font-size: 2rem;
+        }
+        input,
+        button {
+          padding: 0.25rem 0.5rem;
+          font-size: 2rem;
+        }
       }
     </style>
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
-    </form>
+    <main>
+      <div class="steps">
+        <div class="step" data-step="1">Hoşgeldiniz</div>
+      </div>
+    </main>
+    <aside></aside>
 
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      var socket = io();
+      const socket = io("localhost:3000");
+      let id;
 
-      var form = document.getElementById("form");
-      var input = document.getElementById("input");
-
-      form.addEventListener("submit", function (e) {
-        e.preventDefault();
-        if (input.value) {
-          socket.emit("chat message", input.value);
-          input.value = "";
-        }
+      socket.on("connect", () => {
+        console.log(socket.id);
+        id = socket.id;
       });
 
-      socket.on("chat message", function (msg) {
-        var item = document.createElement("li");
-        item.textContent = msg;
-        messages.appendChild(item);
-        window.scrollTo(0, document.body.scrollHeight);
+      let currentStep = 1;
+      let hitData;
+      const maxStep = 5;
+      const result = [];
+      const passiveStepsElement = document.querySelector(".passive-steps");
+      const stepsElement = document.querySelector(".steps");
+      const aside = document.querySelector("aside");
+
+      function render() {
+        const stepElement = stepsElement.lastElementChild;
+        aside.appendChild(stepElement);
+        stepElement.classList.add("passive");
+        const dataStep = parseInt(stepElement.dataset.step);
+        if (dataStep == 1) stepElement.classList.add("hide");
+        if (currentStep == maxStep) renderResult();
+        else renderStep();
+      }
+
+      function renderStep() {
+        result.push(hitData);
+        const text =
+          hitData.number == 0
+            ? "0"
+            : `${hitData.number}x${hitData.factor}=${hitData.total}`;
+        stepsElement.innerHTML += `
+          <div class="step" data-step="${currentStep}" style="--step:${currentStep}">
+            ${currentStep - 1}. atış skoru: ${hitData.total}
+          </div>
+        `;
+        if (currentStep == 4) {
+          setTimeout(() => {
+            nextStep();
+          }, 1000);
+        }
+      }
+
+      function renderResult() {
+        const total = result.reduce((prv, crr) => prv + crr.total, 0);
+        const state = total > 40;
+        stepsElement.innerHTML += `
+          <div class="step" data-step="${currentStep}">
+            ${
+              state
+                ? `
+                <div>Tebrikler kazandınız</div>
+                <form onsubmit="handleForm(event)">
+                  <label for="email">İndirim kodunuzu almak için email giriniz</label>
+                  <div>
+                    <input type="email" name="email" id="email" />
+                    <button>Gönder</button>
+                  </div>
+                </form>
+                <div class="hide">İndirim kodunuz email adresinize gönderilecektir</div>
+              `
+                : `
+              <div>Kaybettiniz</div>
+              `
+            }
+          </div>
+        `;
+        console.log(result);
+      }
+
+      function nextStep() {
+        currentStep += 1;
+        if (currentStep > maxStep) return;
+        render();
+      }
+
+      function getRandomIntInclusive(min, max) {
+        min = Math.ceil(min);
+        max = Math.floor(max);
+        return Math.floor(Math.random() * (max - min + 1) + min);
+      }
+
+      function handleForm(event) {
+        event.preventDefault();
+        const resultStep = document.querySelector(`[data-step="${maxStep}"]`);
+        for (const child of resultStep.children) {
+          child.classList.toggle("hide");
+        }
+        const formData = new FormData(event.target);
+        const email = formData.get("email");
+        socket.emit("submit email", { email });
+      }
+
+      window.start = function () {
+        socket.emit("start", { id });
+      };
+
+      socket.on("hit dart", function (msg) {
+        console.log("hit dart");
+        console.log(msg);
+        hitData = msg;
+        nextStep();
       });
     </script>
   </body>
